fixed input gaps

--- a/src/index.css
+++ b/src/index.css
@@ -772,7 +772,6 @@ details > summary::-webkit-details-marker {
   border: 1px solid #000000;
   width: 360px;
   height: 40px;
-  margin-bottom: 20px;
   padding: 10px 19px;
 }
 
@@ -1526,7 +1525,6 @@ details > summary::-webkit-details-marker {
     border: 1px solid #000000;
     width: 270px;
     height: 40px;
-    margin-bottom: 20px;
     padding: 10px 15px;
     margin-left: 15px;
   }
